0032640: Coding Rules - fix misprints in GeomliteTest_API2dCommands.cxx